<resources>
    <string name="app_name">미니재무플랜</string>

    <!--투자계산기-->
    <string name="calculator_title">미니 재무 플랜</string>
    <string name="saving_title">저축</string>
    <string name="investment_title">투자</string>
    <string name="debt_title">대출상환</string>

    <!--저축-->
    <string name="saving_monthly_payment">단기 목돈모으기(적금:월적금액)</string>
    <string name="saving_goal_amount">단기 목돈모으기(적금:만기금액)</string>
    <string name="saving_deposit">단기 목돈굴리기(예금)</string>

    <!--투자-->
    <string name="investment_monthly_payment">중장기 목돈모으기(월적립액)</string>
    <string name="investment_goal_amount">중장기 목돈모으기(목표금액)</string>
    <string name="investment_deposit">중장기 목돈투자</string>

    <!--대출상환-->
    <string name="debt_maturity">만기일시상환</string>
    <string name="debt_divide_balance">원금균등상환</string>
    <string name="debt_divide_monthly">원리금균등상환</string>

    <!--글쎄-->
    <string name="default_interest_type">단리</string>
    <string name="maturity_value">만기지급액</string>
    <string name="after_tax_interest">세후이자</string>
    <string name="interest">세금</string>
    <string name="monthly_schedule">월별 스케쥴 보기</string>
    <string name="index_selection">회차 선택</string>
    <string name="required_monthly_payment">매월적금액</string>

    <!--투자 계산-->
    <string name="total_investment">총 납입액</string>
    <string name="result_amount">최종금액</string>
    <string name="result_return">총 수익액</string>

    <!--대출 계산-->
    <string name="monthly_interest">월 납입이자</string>
    <string name="monthly_repayment">월 상환금</string>
    <string name="total_interest">총 이자</string>
    <string name="total_repayment">총 상환금액</string>

    <!--공통항목-->
    <string name="calculate">계산하기</string>
    <string name="won">원</string>
    <string name="months">개월</string>
    <string name="percent">%</string>
    <string name="result_calculate">계산결과</string>
    <string name="principal">원금</string>

    <!--세금-->
    <string name="tax_general">일반과세</string>
    <string name="tax_breaks">세금우대</string>
    <string name="tax_free">비과세</string>

    <!-- 입력 메뉴 제목 -->
    <string name="monthly_payment">월 적금액</string>
    <string name="monthly_investment_amount">월 납입액</string>
    <string name="goal_period">목표기간</string>
    <string name="investment_period">투자기간</string>
    <string name="goal_amount">목표금액</string>
    <string name="predicted_period">불입기간</string>
    <string name="deposit_amount">예치금액</string>
    <string name="deposit_period">예치기간</string>
    <string name="interest_rate">이자율</string>
    <string name="interest_type">이자계산방법</string>
    <string name="return_rate">수익률</string>
    <string name="debt_principal">대출원금</string>
    <string name="repayment_period">대출기간</string>
    <string name="first_index">1회차</string>

    <!-- 토스트 -->
    <string name="all_fields_required_toast">모든 항목을 입력하세요</string>

    <string name="minimum_investment_period_toast">기간을 36개월 이상으로 입력해주세요</string>
    <string name="minimum_debt_period_toast">기간을 12개월 이상으로 입력해주세요</string>

    <string name="maximum_saving_period_toast">최대기간은 360개월 입니다</string>
    <string name="maximum_not_saving_period_toast">최대기간은 600개월 입니다</string>

    <string name="maximum_value_toast">더 이상 입력하실 수 없습니다</string>
    <string name="maximum_interest_toast">최대 이자율은 99.99%입니다</string>
    <string name="maximum_fraction_length_toast">소수점 두자리까지 가능합니다</string>

</resources>
