<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/defaultGray100"
    android:paddingBottom="@dimen/dp16"
    android:paddingLeft="@dimen/dp16"
    android:paddingRight="@dimen/dp16"
    android:paddingTop="@dimen/dp16">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45">

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/monthly_payment"
            android:textColor="@color/defaultContents"
            android:gravity="left|center_vertical"
            android:layout_weight="3" />

        <EditText
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp36"
            android:background="@drawable/box_edittext"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/firstSavingMonthlyPaymentTextField"
            android:hint="@string/won"
            android:textColorHint="@color/black30"
            android:textColor="@color/defaultContents"
            android:textSize="@dimen/defaultFontSize"
            android:gravity="right"
            android:layout_weight="7"
            android:paddingTop="@dimen/dp8"
            android:paddingRight="@dimen/dp12" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45">

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/goal_period"
            android:gravity="left|center_vertical"
            android:layout_weight="3" />

        <EditText
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp36"
            android:background="@drawable/box_edittext"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/firstSavingGoalPeriodTextField"
            android:hint="@string/months"
            android:textColorHint="@color/black30"
            android:textColor="@color/defaultContents"
            android:textSize="@dimen/defaultFontSize"
            android:gravity="right"
            android:layout_weight="7"
            android:paddingTop="@dimen/dp8"
            android:paddingRight="@dimen/dp12" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45">

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/interest_rate"
            android:gravity="left|center_vertical"
            android:layout_weight="3" />

        <EditText
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp36"
            android:background="@drawable/box_edittext"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/firstSavingInterestRateTextField"
            android:hint="@string/percent"
            android:textColorHint="@color/black30"
            android:textColor="@color/defaultContents"
            android:textSize="@dimen/defaultFontSize"
            android:gravity="right"
            android:layout_weight="7"
            android:paddingTop="@dimen/dp8"
            android:paddingRight="@dimen/dp12"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45">

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/interest_type"
            android:gravity="left|center_vertical"
            android:layout_weight="3" />

        <TextView
            android:onClick="interestTypeOnClick"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp36"
            android:background="@drawable/box_edittext"
            android:id="@+id/firstSavingInterestTypeTextView"
            android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:textColor="@color/defaultContents"
            android:textSize="@dimen/defaultFontSize"
            android:gravity="right"
            android:layout_weight="7"
            android:padding="@dimen/dp8" />
    </LinearLayout>

    <Button
        android:onClick="calculateSavingFirstOnClick"
        android:id="@+id/calculatorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textColor="@color/defaultWhite"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp12"
        android:background="@color/defaultButton"/>
</LinearLayout>