<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50">

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/monthly_payment"
            android:gravity="center"
            android:layout_weight="3" />

        <EditText
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/firstSavingMonthlyPaymentTextField"
            android:gravity="right"
            android:layout_weight="7"
            android:layout_marginRight="@dimen/dp16" />

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/won"
            android:gravity="left|center_vertical"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50">

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/goal_period"
            android:gravity="center"
            android:layout_weight="3" />

        <EditText
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/firstSavingGoalPeriodTextField"
            android:gravity="right"
            android:layout_weight="7"
            android:layout_marginRight="@dimen/dp16" />

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/months"
            android:gravity="left|center_vertical"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50">

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/interest_rate"
            android:gravity="center"
            android:layout_weight="3" />

        <EditText
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/firstSavingInterestRateTextField"
            android:gravity="right"
            android:layout_weight="7"
            android:layout_marginRight="@dimen/dp16" />

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/percent"
            android:gravity="left|center_vertical"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50">

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/interest_type"
            android:gravity="center"
            android:layout_weight="3" />

        <EditText
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/firstSavingInterestTypeTextField"
            android:gravity="right"
            android:layout_weight="7"
            android:layout_marginRight="@dimen/dp16" />

        <TextView
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:text="@string/won"
            android:gravity="left|center_vertical"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:onClick="calculateSavingFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/cal_button"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/resultTextView"
        android:layout_below="@+id/cal_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</LinearLayout>