<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backGround"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/debtLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp16"
        android:paddingLeft="@dimen/dp16"
        android:paddingRight="@dimen/dp16"
        android:paddingTop="@dimen/dp16"
        android:background="@color/defaultWhite"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            >

            <TextView
                android:layout_width="@dimen/dp0"
                android:layout_height="match_parent"
                android:text="@string/debt_principal"
                android:textColor="@color/defaultContents"
                android:gravity="left|center_vertical"
                android:layout_weight="3" />

            <kr.co.fintalk.fintalkone.common.ClearEditText
                android:id="@+id/debtPrincipalEditText"
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp36"
                android:paddingRight="@dimen/dp12"
                android:gravity="right|center_vertical"
                android:background="@drawable/box_edittext"
                android:inputType="number"
                android:ems="10"
                android:textSize="@dimen/defaultFontSize"
                android:textColor="@color/defaultContents"
                android:layout_weight="7"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45">

            <TextView
                android:layout_width="@dimen/dp0"
                android:layout_height="match_parent"
                android:text="@string/repayment_period"
                android:gravity="left|center_vertical"
                android:layout_weight="3" />

            <kr.co.fintalk.fintalkone.common.ClearEditText
                android:id="@+id/debtRepaymentPeriodEditText"
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp36"
                android:paddingRight="@dimen/dp12"
                android:drawablePadding="@dimen/dp4"
                android:gravity="right|center_vertical"
                android:background="@drawable/box_edittext"
                android:inputType="number"
                android:ems="10"
                android:textSize="@dimen/defaultFontSize"
                android:textColor="@color/defaultContents"
                android:layout_weight="7"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45">

            <TextView
                android:layout_width="@dimen/dp0"
                android:layout_height="match_parent"
                android:text="@string/interest_rate"
                android:gravity="left|center_vertical"
                android:layout_weight="3" />

            <kr.co.fintalk.fintalkone.common.ClearEditText
                android:id="@+id/debtInterestRateEditText"
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp36"
                android:paddingRight="@dimen/dp12"
                android:gravity="right|center_vertical"
                android:background="@drawable/box_edittext"
                android:inputType="numberDecimal"
                android:ems="10"
                android:textSize="@dimen/defaultFontSize"
                android:textColor="@color/defaultContents"
                android:layout_weight="7"
                />
        </LinearLayout>

        <Button
            android:onClick="calculateDebtOnClick"
            android:id="@+id/calculatorButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp8"
            android:text="@string/calculate"
            android:textColor="@color/defaultWhite"
            android:gravity="center"
            android:background="@color/defaultButton"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp8"
        android:layout_below="@+id/debtLinearLayout"
        android:background="@color/defaultWhite">

        <ListView
            android:id="@+id/debtResultListView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp200"
            android:background="@color/defaultWhite"
            android:headerDividersEnabled="true"
            android:divider="@color/defaultDivider"
            android:dividerHeight="@dimen/dp1"/>

        <Button
            android:onClick="detailScheduleOnClick"
            android:id="@+id/detailScheduleButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_marginTop="@dimen/dp4"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_below="@+id/debtResultListView"
            android:text="@string/monthly_schedule"
            android:textColor="@color/defaultButton"
            android:gravity="center"
            android:background="@drawable/rounded_button"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </RelativeLayout>

</RelativeLayout>